--- a/src/sections/group/matches/matches.component.html
+++ b/src/sections/group/matches/matches.component.html
@@ -27,7 +27,7 @@
         matSortActive="timestamp"
         matSortDisableClear
         matSortDirection="asc"
-        *ngIf="!matchesLoading"
+        [hidden]="matchesLoading"
     >
         <ng-container matColumnDef="timestamp">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
