--- a/src/sections/home/home.component.scss
+++ b/src/sections/home/home.component.scss
@@ -2,19 +2,14 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+  margin: 0 auto;
 
   > mat-form-field {
     width: 100%;
   }
-}
 
-.new-group {
   display: flex;
   justify-content: center;
-
-  > * {
-    display: inline-block;
-  }
 }
 
 .loading-group {
